samples/_failures_safe/1761619874_5627ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_862bff68.c: In function ‘main’:
./samples/SAFE/__tmp_862bff68.c:200:5: error: expected expression at end of input
  200 |     if (token_count <=
      |     ^~
./samples/SAFE/__tmp_862bff68.c:200:5: error: expected declaration or statement at end of input
